--- a/frontend/src/components/HomePage.scss
+++ b/frontend/src/components/HomePage.scss
@@ -92,6 +92,7 @@
     right: 1rem;
     margin: 0;
     text-align: right;
+    text-decoration:none;
   }
   
   .selected-post p:not(.post-author) {
@@ -101,6 +102,7 @@
     width: 100%;
     overflow-wrap: break-word;
     word-wrap: break-word;
+    text-decoration:none;
   }
   
   .post-actions {
@@ -298,11 +300,13 @@
     color: var(--text-color);
     opacity: 0.7;
     margin-bottom: 1rem;
+    text-decoration:none;
   }
   
   p {
     color: var(--text-color);
     line-height: 1.6;
+    text-decoration:none;
   }
 }
 .post-card img {
